# poseidon-circuit

./: Cargo.toml
src/: lib.rs  poseidon.rs
src/poseidon/: primitives.rs
src/poseidon/primitives/: grain.rs  mds.rs  p128pow5t3.rs  p128pow5t3_compact.rs
src/poseidon/primitives/bn256/: fp.rs  mod.rs
