[package]
name = "poseidon-primitives"
version = "0.1.1"
edition = "2021"
description = """
Native rust implementation of the Poseidon hash function.
This is forked from Scroll's audited Poseidon halo2 circuit implementation, but this crate does not include the circuit.
"""
repository = "https://github.com/axiom-crypto/poseidon-circuit"
autotests = false
autobenches = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0"
bitvec = "1"
log = "0.4.0"
rand_xorshift = "0.3.0"
rand = "0.8"
ff = "0.13"

[features]
default = []
# Use an implementation using fewer rows (8) per permutation.
short = []
# printout the layout of circuits for demo and some unittests
print_layout = ["halo2_proofs/dev-graph"]
legacy = []

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3.0"
plotters = "0.3"
bencher = "0.1"
subtle = "2"
halo2_proofs = { package = "halo2-axiom", version = "*" }

# [[bench]]
# name = "hash"
# harness = false

[profile.test]
opt-level = 3
debug-assertions = true
